# TimeSpent

./: Cargo.toml  LICENSE  README.md  build.rs  installer.iss
src/: getconfig.rs  globals.rs
src/daemon/: daemon.rs  write.rs
src/gui/: contextmenu.rs  gui.rs  table.rs  utils.rs  windows.rs
src/gui/windows/: deletewindow.rs  renamewindow.rs  statuswindow.rs
